style.css
html {
    box-sizing: border-box;
    background-color: black;
    color: white;
    font-family: 'Amiri', serif;
}

* {
    box-sizing: inherit;
}

html, body {
    height: 100%;
    margin: 0;
}

.left {
    float: left;
}

.right {
    float: right;
}

#header {
    text-align: center;
    font-family: 'Tinos', serif;
    height: calc(100% - 140px);
    background-image: url('pressfoto1justerad.jpg');
    background-position: center;
    background-size: cover;
    position: relative;
    transition: all 1s;
}
#header.hidden {
    height: 200px;
    background-position-y: 32%;
}

#header > div {
    position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
    line-height: 200px;
    font-size: 90px;
    font-family: 'Tinos', serif;
    cursor: pointer;
}
/* @media only screen and (max-width: 1000px) {
    #header {
        margin-top: -100px;
    }
} */

#header img {
    max-width: 100%;
    font-size: 90px;
}



#menu {
    padding: 0 7%;
    height: 140px;
    position: relative;
}

#menu table {
    height: 140px;
    width: 100%;
    text-align: center;
    table-layout: fixed;
    font-family: 'Tinos', serif;
    height: 140px;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

#menu table td {
    padding: 12px 0;
    font-size: 1.8em;
    cursor: pointer;
    /* border-left: 1px solid white; */
}

#menu table td:first-child {
    float: left;
}
#menu table td:last-child {
    float: right;
}

#menu table td.active {
    text-decoration: underline;
}

#content {
    padding: 15px 10%;
}
#content.hidden {
    overflow: hidden;
    height: 0;
    padding-top: 0;
    padding-bottom: 0;
}
#content h1 {
    font-size: 1.8em;
}
#content p {
    font-size: 1.4em;
}
#content a {
    color: white;
}

#page {
    /* background-color: rgb(127, 127, 127); */
    background-color: rgb(116, 116, 116);
    transition: all 1s;
    min-height: calc(100vh - 200px);
}
#page.hidden {
    background-color: black;
    min-height: 0;
}

.unselectable {
    user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
}

.left, .right {
    width: 50%;
    margin: 5px;
}
@media only screen and (max-width: 1000px) {
    .left, .right {
        width: 100%;
        display: block;
    }
}

